# agent-template

./: .env.example  .gitignore  AGENT.md  README.md  SOUL.md  bot.py  pyproject.toml  requirements.txt  tg_send.py
deploy/: agent.service  install.sh
src/agent/: __init__.py  __main__.py  claude.py  config.py  cron.py  handlers.py  mcp_schedule.py  messaging.py  schedule_store.py
tests/: test_claude.py  test_config.py  test_cron.py  test_handlers.py  test_messaging.py  test_schedule_store.py  test_schedule_tick.py  test_typing_indicator.py
