[project]
name = "agent"
version = "0.1.0"
description = "Minimal single-owner Telegram ↔ Claude Code bridge — fork, reskin with a SOUL, deploy."
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
